Detached config strings in files